ajout des projets et mise en page

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         </div>
 
         <ul>
-            <li><a href="parcours.html">Parcours</a></li>
-            <li><a href="competences.html">Compétences</a></li>
-            <li><a href="projets.html">Projets</a></li>
-            <li><a href="contact.html">On se recontre !</a></li>
-          </ul> 
+            <li><a href="#projets">Projets</a></li>
+            <li><a href="#parcours">Parcours</a></li>
+            <li><a href="#competences">Compétences</a></li>
+            <li><a href="#contact">On se recontre !</a></li>
+        </ul>
     </header>
     <main>
-        <section>
+        <section id="presentation">
             <h2>Qui suis-je ?</h2>
             <p>
                 Après plusieurs expériences dans le domaine de l’environnement avec des missions en lien avec
@@ -39,15 +39,229 @@
                 j’entreprends une reconversion en tant que <strong>développeuse web</strong>.
             </p>
         </section>
+        <section id="projets">
+            <h2>Les projets !</h2>
+            <div class="projects">
+                <div class="project">
+                    <img class="image" src="./images/projets/les-12-travaux.png"
+                        alt="projet les 12 travaux d'Hercule" />
+                    <div class="description">
+                        <figcaption>Projet sur le thème des 12 travaux d'Hercule</figcaption>
+                    </div>
+                </div>
+                <div class="project">
+                    <img class="image" src="./images/projets/Onews.png" alt="projet Onews" />
+                    <div class="description">
+                        <figcaption>Projet pour une gazette d'école</figcaption>
+                    </div>
+                </div>
+                <div class="project">
+                    <img class="image" src="./images/projets/plantes-grasses-index.png"
+                        alt="Projet sur un site marchand de plantes grasses" />
+                    <div class="description">
+                        <figcaption>Projet sur un site marchand de plantes grasses</figcaption>
+                    </div>
+                </div>
+                <div class="project">
+                    <img class="image" src="./images/projets/hc.png"
+                        alt="Projet de présentation de la série Hero Corp" />
+                    <div class="description">
+                        <figcaption>Projet de présentation de la série Hero Corp</figcaption>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="parcours">
+            <h2>Mon parcours</h2>
+            <div class="xp">
+                <p>J'ai travaillé presque 3 ans dans le <em>recyclage</em> de plastique. J'ai eu de multiples missions
+                    telles que
+                    :
+                </p>
+                <ul>
+                    <li><em>Digitalisation</em> de l’entreprise : </li>
+                    <li><em>mise en place de l’ERP</em> Ckdev : <em>apprentissage</em> de l'outil, <em>réflexion</em>
+                        sur la transposition du
+                        papier au logiciel, <em>transmission</em> des connaissances.</li>
+                    <li>Mise en place et gestion du <em>site internet</em>
+                        <a target="_blank" href="https://audiceplastics.eu/">https://audiceplastics.eu/</a></li>
+                    <li><em>Coordination</em> logistique, production et vente des matières plastiques</li>
+                    <li>Recherche de producteurs et valorisateurs de déchets en Europe. Visite de sites de production,
+                        <em>compréhension et gestion des enjeux</em></li>
+                </ul>
+            </div>
+            <div class="xp">
+                <p>
+                    J'ai été en <em>alternance</em> pendant <em>2 ans</em> dans deux enseignes Biocoop de
+                    distribution bio à
+                    Villeneuve-d'Ascq et Lille
+                </p>
+                <p>
+                    Mes principales missions étaient :
+                </p>
+                <ul>
+                    <li><em>Administration du site</em>, de la page Facebook et <em>communication</em> sur lieu de vente
+                    </li>
+                    <li><em>Mise en place d’un évènement</em> zéro déchet : 40 intervenants par édition. <em>Record</em>
+                        du nombre de
+                        passage caisse depuis la création du magasin en 1996.</li>
+                    <li><em>Analyse</em> du magasin via les différents acteurs externes et internes les données
+                        chiffrées du
+                        magasin.</li>
+                </ul>
+            </div>
+            <div class="xp">
+                <p>
+                    J'ai vécu et travaillé en <em>Nouvelle-Zélande</em> pendant <em>6 mois</em> dans différentes
+                    structures.
+                </p>
+                <p>
+                    Cela m'a permis de perfectionner mon anglais et d'obtenir 890/990 au TOEIC qui équivaut à un niveau
+                    C1.
+                </p>
+            </div>
+        </section>
+        <section id="competences">
+            <h2>Des compétences multiples</h2>
+            <p>
+                Je suis actuellement la formation <em>développeur web fullstack Javascript</em> chez <a target="_blank"
+                    href="https://oclock.io/formations/developpeur-web-fullstack-javascript"
+                    alt="site Oclock">O’clock</a>.
+                <br />
+                Cette formation permet d'obtenir une équivalence bac+2 <em>Développeur Web et Web Mobile</em>.
+                On y voit plusieurs sujets tels que :</p>
+            <div class="subjects">
+                <div class="subjects__left">
+                    <figcaption>HTML/CSS</figcaption>
+                    <img class="subjects__pictures" src="./images/technologies/HTML5.png" alt="HTML">
+                    <img class="subjects__pictures" src="./images/technologies/CSS3.png" alt="CSS">
+                    <figcaption>Javascript</figcaption>
+                    <img class="subjects__pictures" src="./images/technologies/JS200.png" alt="agile">
+                    <figcaption>Node.js</figcaption>
+                    <img class="subjects__pictures" src="./images/technologies/nodeJS.png" alt="Node">
+                    <figcaption>React</figcaption>
+                    <img class="subjects__pictures" src="./images/technologies/React.png" alt="React">
+                    <figcaption>SQL / NoSQL</figcaption>
+                    <img class="subjects__pictures" src="./images/technologies/data200.png" alt="BDD">
+                </div>
+                <div class="subjects__right">
+
+                    <figcaption>AJAX</figcaption>
+                    <img class="subjects__pictures" src="./images/technologies/Ajax.png" alt="Ajax">
+                    <figcaption>Git</figcaption>
+                    <img class="subjects__pictures" src="./images/technologies/git.png" alt="Git">
+                    <figcaption>GitHub</figcaption>
+                    <img class="subjects__pictures" src="./images/technologies/GitHub-Mark-120px-plus.png" alt="GitHub">
+                    <figcaption>Agile</figcaption>
+                    <img class="subjects__pictures" src="./images/technologies/agile.png" alt="agile">
+                </div>
+            </div>
+            <p>Le déroulement des cours se fait en <em>100% téléprésentiel</em>, ce qui permet d'apprendre à travailler
+                à
+                distance en <em>équipe</em>.</p>
+            <p>Le maitre mot est <em>la pratique</em> ! Le matin nous corrigeons tous ensemble le challenge de la
+                veille,
+                l'après-midi nous abordons une nouvelle notion et le soir nous faisons un <em>challenge</em> pour mettre
+                en
+                pratique les connaissances apprises</p>
+
+
+            <h2>Et après ?</h2>
+            <p>
+                Je finis la formation en <em>juillet 2021</em> donc à partir de cette date là je serai en recherche
+                d'emploi pour
+                un poste de <em>développeur web</em>.
+            </p>
+
+
+            <h2>Des compétences ?</h2>
+            <p>
+                <em>Avant d'entammer cette reconversion</em> j'ai suivi des cours sur différentes plateformes aussi bien
+                sur le
+                thème les hard skills que les soft skills.
+                <div class="skills">
+                    <div class="skills__hard"><strong>Hard skills</strong>
+
+                        <p>Apprenez à créer votre site web avec <em>HTML5 et CSS3</em> - <span
+                                class="school">OpenClassrooms</span></p>
+                        <p><em>Responsive Web Design</em> - <span class="school">FreeCodeCamp.org</span></p>
+                        <p>Apprendre à coder en <em>JavaScript</em> - <span class="school">pierre-giraud.com</span></p>
+                        <p>Débutez l'<em>analyse logicielle</em> avec UML - <span class="school">OpenClassrooms</span>
+                        </p>
+                        <p>Réalisez le <em>cahier des charges</em> d'un projet digital - <span
+                                class="school">OpenClassrooms</span></p>
+                    </div>
+                    <div class="skills__soft"><strong>Soft skills</strong>
+
+                        <p>Du <em>manager au leader</em> : devenir agile et collaboratif – <span
+                                class="school">CNAM</span></p>
+                        <p>Apprenez à bien cadrer un <em>projet multimédia</em> - <span
+                                class="school">OpenClassrooms</span></p>
+                        <p>Management de la <em>diversité</em> - <span class="school">Université de Montpellier</span>
+                        </p>
+                    </div>
+                </div>
+            </p>
+            <div class="etudes">
+                <p>En ce qui concerne les études, j'ai obtenu le <em>Master 2 à Espas</em> qui est une école de
+                    <em>commerce et
+                        sciences</em> qui fait partie de l'<em>Université Catholique de Lille</em></p>
+            </div>
+        </section>
+        <section id="contact">
+            <h2>On discute !</h2>
+            <form id="form" action="">
+                <fieldset>
+                    <legend>Identité</legend>
+                    <div class="form-row">
+                        <label class="label" for="prenom">Mon prénom est </label>
+                        <input name="firstname" id="prenom" type="text" placeholder="Prénom" />
+                    </div>
+                    <div class="form-row">
+                        <label class="label" for="nom">Et mon nom, </label>
+                        <input name="lastname" id="nom" type="text" placeholder="Nom" />
+                    </div>
+                    <div class="form-row">
+                        <label class="label" for="source">J'ai connu ce site grâce à </label>
+                        <select id="source" name="source">
+                            <option value="GitHub">GitHub</option>
+                            <option value="LinkedIn">LinkedIn</option>
+                            <option value="Twitter">Twitter</option>
+                            <option value="Google">Google</option>
+                            <option value="Autre">Autre</option>
+                        </select>
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <legend>Message</legend>
+                    <div class="form-row">
+                        <label class="label" for="email">Mon e-mail</label>
+                        <input name="email" id="email" type="email" placeholder="Email" />
+                    </div>
+                    <div class="form-row">
+                        <label class="label" for="message">Votre message</label>
+                        <textarea name="message" placeholder="Dites moi tout !" id="message"></textarea>
+                    </div>
+                    <div class="form-row">
+                        <label class="label" for="info">Je certifie la véracité de ces informations.</label>
+                        <input name="info" type="checkbox" id="info" />
+                    </div>
+                </fieldset>
+                <button type="submit">Envoyer</button>
+            </form>
+        </section>
+        <section>
+            <h2>Par ici les réseaux</h2>
+
+            <a target="_blank" href="https://www.linkedin.com/in/s%C3%A9gol%C3%A8ne-danjou-811988a8/"
+                alt="LinkedIn Ségolène Danjou"><img class="network"
+                    src="./images/technologies/LinkedIn_logo_initials.webp"></a>
+
+            <a target="_blank" href="https://github.com/Segolene-Danjou" alt="GitHub Ségolène Danjou"><img
+                    class="network" src="./images/technologies/GitHub-Mark-120px-plus.png"></a>
+        </section>
     </main>
     <footer>
-        <a target="_blank" href="https://www.linkedin.com/in/s%C3%A9gol%C3%A8ne-danjou-811988a8/"
-        alt="LinkedIn Ségolène Danjou"><img class="network"
-            src="../Portfolio/images/LinkedIn_logo_initials.webp"></a>
-
-    <a target="_blank" href="https://github.com/Segolene-Danjou" alt="GitHub Ségolène Danjou"><img class="network"
-            src="../Portfolio/images/GitHub-Mark-120px-plus.png"></a>
-</section>
     </footer>
 </body>
 
