ajout des liens

--- a/index.html
+++ b/index.html
@@ -46,27 +46,27 @@
                     <img class="image" src="./images/projets/les-12-travaux.png"
                         alt="projet les 12 travaux d'Hercule" />
                     <div class="description">
-                        <figcaption>Projet sur le thème des 12 travaux d'Hercule</figcaption>
+                        <a href="https://github.com/Segolene-Danjou/les-12-travaux-dhercule" target="_blank"><figcaption>Projet sur le thème des 12 travaux d'Hercule</figcaption></a>
                     </div>
                 </div>
                 <div class="project">
-                    <img class="image" src="./images/projets/Onews.png" alt="projet Onews" />
+                    <img class="image" src="./images/projets/Onews.png" alt="projet Onews"/>
                     <div class="description">
-                        <figcaption>Projet pour une gazette d'école</figcaption>
+                        <a href="https://github.com/Segolene-Danjou/Onews" target="_blank"><figcaption>Projet pour une gazette d'école</figcaption></a>
                     </div>
                 </div>
                 <div class="project">
                     <img class="image" src="./images/projets/plantes-grasses-index.png"
                         alt="Projet sur un site marchand de plantes grasses" />
                     <div class="description">
-                        <figcaption>Projet sur un site marchand de plantes grasses</figcaption>
+                        <a href="https://github.com/Segolene-Danjou/Plantes-grasses" target="_blank"><figcaption>Projet sur un site marchand de plantes grasses</figcaption></a>
                     </div>
                 </div>
                 <div class="project">
                     <img class="image" src="./images/projets/hc.png"
-                        alt="Projet de présentation de la série Hero Corp" />
+                        alt="Projet de présentation de la série Hero Corp"/>
                     <div class="description">
-                        <figcaption>Projet de présentation de la série Hero Corp</figcaption>
+                        <a href="https://github.com/Segolene-Danjou/Hero-Corp" target="_blank"><figcaption>Projet de présentation de la série Hero Corp</figcaption></a>
                     </div>
                 </div>
             </div>
@@ -209,7 +209,7 @@
             </div>
         </section>
         <section id="contact">
-            <h2>On discute !</h2>
+            <h2>On se rencontre !</h2>
             <form id="form" action="">
                 <fieldset>
                     <legend>Identité</legend>
