ajout de projets

--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
             <h2>Les projets !</h2>
             <div class="projects">
                 <div class="project">
+                    <img class="image" src="./images/projets/des.png"
+                        alt="projet d'un jeu de dés" />
+                    <div class="description">
+                        <a href="https://github.com/Segolene-Danjou/jeu-de-des" target="_blank"><figcaption>Projet d'un jeu de dés</figcaption></a>
+                    </div>
+                </div>
+                <div class="project">
+                    <img class="image" src="./images/projets/le-nombre-juste.png"
+                        alt="projet d'un jeu dans lequel il faut trouver le bon nombre" />
+                    <div class="description">
+                        <a href="https://github.com/Segolene-Danjou/le-nombre-juste" target="_blank"><figcaption>Projet d'un jeu dans lequel il faut trouver le bon nombre</figcaption></a>
+                    </div>
+                </div>
+                <div class="project">
                     <img class="image" src="./images/projets/les-12-travaux.png"
                         alt="projet les 12 travaux d'Hercule" />
                     <div class="description">
@@ -208,7 +222,7 @@
                         sciences</em> qui fait partie de l'<em>Université Catholique de Lille</em></p>
             </div>
         </section>
-        <section id="contact">
+        <!-- id="contact">
             <h2>On se rencontre !</h2>
             <form id="form" action="">
                 <fieldset>
@@ -249,9 +263,9 @@
                 </fieldset>
                 <button type="submit">Envoyer</button>
             </form>
-        </section>
+        </!->-->
         <section>
-            <h2>Par ici les réseaux</h2>
+            <h2>On échange !</h2>
 
             <a target="_blank" href="https://www.linkedin.com/in/s%C3%A9gol%C3%A8ne-danjou-811988a8/"
                 alt="LinkedIn Ségolène Danjou"><img class="network"
@@ -259,6 +273,8 @@
 
             <a target="_blank" href="https://github.com/Segolene-Danjou" alt="GitHub Ségolène Danjou"><img
                     class="network" src="./images/technologies/GitHub-Mark-120px-plus.png"></a>
+
+                    <a href = "mailto: segolene.danjou@gmail.com"><img class="network" src="images/technologies/mail.png" alt="image email"></a>
         </section>
     </main>
     <footer>
