ajout projet pixel art

--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
             <h2>Les projets !</h2>
             <div class="projects">
                 <div class="project">
+                    <img class="image" src="./images/projets/pixel-art.png"
+                        alt="projet d'un jeu de pixel art" />
+                    <div class="description">
+                        <a href="https://github.com/Segolene-Danjou/pixel-art" target="_blank"><figcaption>Projet d'un jeu de pixel art</figcaption></a>
+                    </div>
+                </div>
+                <div class="project">
                     <img class="image" src="./images/projets/des.png"
                         alt="projet d'un jeu de dés" />
                     <div class="description">
