--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
             <h2>Les projets !</h2>
             <div class="projects">
                 <div class="project">
+                    <img class="image" src="./images/projets/IGuess.png"
+                        alt="projet du jeu IGuess" />
+                    <div class="description">
+                        <a href="https://github.com/Segolene-Danjou/IGuess" target="_blank"><figcaption>Projet du jeu IGuess</figcaption></a>
+                    </div>
+                </div>
+                <div class="project">
+                    <img class="image" src="./images/projets/Simon.png"
+                        alt="projet du jeu Simon" />
+                    <div class="description">
+                        <a href="https://github.com/Segolene-Danjou/simon" target="_blank"><figcaption>Projet du jeu Simon</figcaption></a>
+                    </div>
+                </div>
+                <div class="project">
                     <img class="image" src="./images/projets/homere.png"
                         alt="projet d'un réseau social" />
                     <div class="description">
