ajout projet pokedex

--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
             <h2>Les projets !</h2>
             <div class="projects">
                 <div class="project">
+                    <img class="image" src="./images/projets/pokedex.png"
+                        alt="projet d'une Pokedex" />
+                    <div class="description">
+                        <a href="https://github.com/Segolene-Danjou/pokedex" target="_blank"><figcaption>Projet d'un Pokedex</figcaption></a>
+                    </div>
+                </div>
+                <div class="project">
                     <img class="image" src="./images/projets/gameHub.png"
                         alt="projet d'une plateforme de jeux" />
                     <div class="description">
