ajout triple deck

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
                     </div>
                 </div>
                 <div class="project">
+                    <img class="image" src="./images/projets/tt-deck-builder.png"
+                        alt="projet d'un triple triad deck'" />
+                    <div class="description">
+                        <a href="https://github.com/Segolene-Danjou/triple-triad-deck" target="_blank"><figcaption>Projet d'un triple triad deck</figcaption></a>
+                    </div>
+                </div>
+                <div class="project">
                     <img class="image" src="./images/projets/gameHub.png"
                         alt="projet d'une plateforme de jeux" />
                     <div class="description">
