--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
                     </div>
                 </div>
                 <div class="project">
+                    <img class="image" src="./images/projets/trombi-scientifiques.png" alt="projet d'un trombinoscope de scientifiques" />
+                    <div class="description">
+                        <a href="https://github.com/Segolene-Danjou/trombi-scientifiques" target="_blank">
+                            <figcaption>Projet d'un trombinoscope de scientifiques</figcaption>
+                        </a>
+                    </div>
+                </div>
+                <div class="project">
                     <img class="image" src="./images/projets/pokedex.png" alt="projet d'une Pokedex" />
                     <div class="description">
                         <a href="https://github.com/Segolene-Danjou/pokedex" target="_blank">
