--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="#projets">Projets</a></li>
             <li><a href="#parcours">Parcours</a></li>
             <li><a href="#competences">Compétences</a></li>
-            <li><a href="#contact">On se recontre !</a></li>
+            <li><a href="#contact">On se rencontre !</a></li>
         </ul>
     </header>
     <main>
