ajout du projet bookshelf

--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
             <h2>Les projets !</h2>
             <div class="projects">
                 <div class="project">
+                    <img class="image" src="./images/projets/bookshelf.png" alt="projet d'une API de gestion de bibliothèque personnelle" />
+                    <div class="description">
+                        <a href="https://github.com/Segolene-Danjou/bookshelf" target="_blank">
+                            <figcaption>Projet d'une API de gestion de bibliothèque personnelle</figcaption>
+                        </a>
+                    </div>
+                </div>
+                <div class="project">
                     <img class="image" src="./images/projets/kaban.png" alt="projet d'un kanban" />
                     <div class="description">
                         <a href="https://github.com/Segolene-Danjou/kanban-api" target="_blank">
